--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <header>
         <h1 class="header-heading">Jetpack Compose</h1>
         <div>
-            <a class="menu selected" href="#" id="composeLink">Compose</a>
-            <a class="menu" href="#" id="profileLink">Profile</a>
+            <a class="menu selected" href="index.html" id="composeLink">Compose</a>
+            <a class="menu" href="profile.html" id="profileLink">Profile</a>
         </div>
     </header>
 
     <div class="container">
         <div class="card">
-            <a href="card1.html">
-                <h2>Title 1</h2>
-                <p>Description 1</p>
+            <a href="page_texts.html">
+                <h2>Text</h2>
+                <p>TextView in Jetpack Compose</p>
             </a>
         </div>
         <div class="card">
