--- a/page_texts.html
+++ b/page_texts.html
@@ -1,56 +1,159 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Text in Compose</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-	<header>
-	    <h1 class="header-heading">Jetpack Compose</h1>
-	    <div>
-	        <a class="menu selected" href="index.html" id="composeLink">Compose</a>
-	        <a class="menu" href="profile.html" id="profileLink">Profile</a>
-	    </div>
-	</header>
-	<script>
-		const profileLink = document.getElementById("profileLink");
-		const composeLink = document.getElementById("composeLink");
-		const headerHeading = document.querySelector(".header-heading");
 
-		profileLink.addEventListener("click", () => {
-		    profileLink.classList.add("selected");
-		    composeLink.classList.remove("selected");
-		    headerHeading.textContent = "Akshay's Profile";
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Text in Compose</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
+	</head>
+
+	<body>
+		<header>
+		    <h1 class="header-heading">Jetpack Compose / Text</h1>
+		    <div>
+		        <a class="menu selected" href="index.html" id="composeLink">Compose</a>
+		        <a class="menu" href="profile.html" id="profileLink">Profile</a>
+		    </div>
+		</header>
+
+		<div class="page">
+			<div class="code-container"></div>
+			<div class="list">
+				<div class="item-container">
+	        		<div class="page-card def-selected" card-id="1">
+			             <h2>Text</h2>
+			             <p>TextView in Jetpack Compose</p>
+	      		  	</div>
+			        <div class="page-card" card-id="2">
+			            <h2>Title 2</h2>
+			            <p>Description 2</p>
+			        </div>
+    			</div>
+			</div>
+		</div>
+
+ 
+
+
+<script type="text/javascript">
+
+	const profileLink = document.getElementById("profileLink");
+	const composeLink = document.getElementById("composeLink");
+	const headerHeading = document.querySelector(".header-heading");
+
+	profileLink.addEventListener("click", () => {
+	    profileLink.classList.add("selected");
+	    composeLink.classList.remove("selected");
+	    headerHeading.textContent = "Akshay's Profile";
+	});
+
+	composeLink.addEventListener("click", () => {
+	    composeLink.classList.add("selected");
+	    profileLink.classList.remove("selected");
+	    headerHeading.textContent = "Jetpack Compose";
+	});
+
+//---------------------------------------------------------------
+	const cards = document.querySelectorAll('.page-card');
+	const dataContainer = document.querySelector('.code-container');
+	cards.forEach(pcard => {
+		pcard.addEventListener('click', () => { 
+			cards.forEach(otherCard => {
+	    		otherCard.classList.remove('selected-card');
+			});
+			pcard.classList.add('selected-card');
+			// const cardId = pcard.getAttribute('card-id');
+			// const data = fetchDataById(cardId);
+			// displayData(data);
 		});
+	});
 
-		composeLink.addEventListener("click", () => {
-		    composeLink.classList.add("selected");
-		    profileLink.classList.remove("selected");
-		    headerHeading.textContent = "Jetpack Compose";
-		});
-	</script>
+	const defaultSelectedCard = document.querySelector('.def-selected');
+    if (defaultSelectedCard) {
+        defaultSelectedCard.classList.add('selected-card');
+        const cardId = defaultSelectedCard.getAttribute('card-id');
+        const data = fetchDataById(cardId);
+        displayData(data);
+    }
 
-	 <div class="grid-container">
-		<div class="grid-item" onclick="showDialog('image1.jpg', 'Text for Image 1')">
-		    <img src="https://raw.githubusercontent.com/pwraxe/compose/main/images/sameple.png" alt="Image 1">
-		    <p>Text for Image 1</p>
-		</div>
-		<div class="grid-item" onclick="showDialog('image1.jpg', 'Text for Image 2')">
-		    <img src="https://raw.githubusercontent.com/pwraxe/compose/main/images/sameple.png" alt="Image 2">
-		    <p>Text for Image 2</p>
-		</div>
-		<div class="grid-item" onclick="showDialog('image1.jpg', 'Text for Image 3')">
-		    <img src="https://raw.githubusercontent.com/pwraxe/compose/main/images/sameple.png" alt="Image 3">
-		    <p>Text for Image 3</p>
-		</div>
-		<div class="grid-item" onclick="showDialog('image1.jpg', 'Text for Image 4')">
-		    <img src="https://raw.githubusercontent.com/pwraxe/compose/main/images/sameple.png" alt="Image 3">
-		    <p>Text for Image 3</p>
-		</div>
-	</div>
+    cards.forEach(card => {
+        card.addEventListener('click', () => {
+            const cardId = card.getAttribute('card-id');           
+            const data = fetchDataById(cardId);
+            displayData(data);
+        });
+    });
+
+    function fetchDataById(cardId) {
+    	console.log(`Fetching data for card ID: ${cardId}`);
+ 
+        const data = [
+            { id: 1, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/images/output-1.png', description: `
+
+class MainActivity : ComponentActivity() {
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContent {
+            JetpackComposeTheme {}
+        }
+    }
+}
+
+@Preview
+@Composable
+fun LearnCompose() {
+    Text(text = "Hello there")
+}
+`
+			},
+
+            { id: 2, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/images/sameple.png', description: `
+
+class MainActivity : ComponentActivity() {
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContent {
+            JetpackComposeTheme {}
+        }
+    }
+}
+
+@Preview
+@Composable
+fun LearnCompose() {
+    Text(text = "Hello here, Page 2")
+}
+`
+
+        },
+ 
+        ];
+
+        return data.find(item => item.id === parseInt(cardId));
+    }
+
+    function displayData(data) {
+    	console.log(`Displaying data: ${data}`);
+        if (data) {
+            dataContainer.innerHTML = `
+
+				 	<div class="output-image">
+					<img src="${data.src}" alt="Output 1" width="100%" height="100%">
+				</div>
+
+				<div class="output-code">
+					
+					<pre>
+						<code class="language-kotlin">${data.description}</code>
+					</pre>
+				</div>
+            `;
+        } else {
+            dataContainer.innerHTML = 'Data not found';
+        }
+    }
+</script>
 
 </body>
-
 </html>
