--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>Description 2</p>
             </a>
         </div>
-
+        <!-- Add more cards as needed -->
     </div>
 
     <script>
