--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="header-heading">Jetpack Compose</h1>
         <div>
             <a class="menu selected" href="index.html" id="composeLink">Compose</a>
-            <a class="menu" href="profile.html" id="profileLink">Profile</a>
+            <a class="menu" href="index.html" id="profileLink">Profile</a>
         </div>
     </header>
 
@@ -24,9 +24,9 @@
             </a>
         </div>
         <div class="card">
-            <a href="card2.html">
-                <h2>Title 22</h2>
-                <p>Description 22</p>
+            <a href="page_layout.html">
+                <h2>Layout</h2>
+                <p>Elements Position, Box, Column, Row</p>
             </a>
         </div>
         <!-- Add more cards as needed -->
