--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
                 <p>Elements Position, Box, Column, Row</p>
             </a>
         </div>
+
+        <div class="card">
+            <a href="page_practice.html">
+                <h2>Practice</h2>
+                <p>Practice code from Code-Lab or self idea</p>
+            </a>
+        </div>
+
         <!-- Add more cards as needed -->
     </div>
 
