--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
                 <p>TextView in Jetpack Compose</p>
             </a>
         </div>
+
+        <div class="card">
+            <a href="page_buttons.html">
+                <h2>Buttons</h2>
+                <p>Different Types of Buttons in Jetpack Compose</p>
+            </a>
+        </div>
+
+
         <div class="card">
             <a href="page_layout.html">
                 <h2>Layout</h2>
