project structure change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="compose/styles/styles.css">
 </head>
 
 <body>
@@ -12,20 +12,20 @@
         <h1 class="header-heading">Jetpack Compose</h1>
         <div>
             <a class="menu selected" href="index.html" id="composeLink">Compose</a>
-            <a class="menu" href="index.html" id="profileLink">Profile</a>
+            <a class="menu" href="profile/index.html" id="profileLink">Profile</a>
         </div>
     </header>
 
     <div class="container">
         <div class="card">
-            <a href="page_texts.html">
+            <a href="compose/pages/page_texts.html">
                 <h2>Text</h2>
                 <p>TextView in Jetpack Compose</p>
             </a>
         </div>
 
         <div class="card">
-            <a href="page_buttons.html">
+            <a href="compose/pages/page_buttons.html">
                 <h2>Buttons</h2>
                 <p>Different Types of Buttons in Jetpack Compose</p>
             </a>
@@ -33,14 +33,14 @@
 
 
         <div class="card">
-            <a href="page_layout.html">
+            <a href="compose/pages/page_layout.html">
                 <h2>Layout</h2>
                 <p>Elements Position, Box, Column, Row</p>
             </a>
         </div>
 
         <div class="card">
-            <a href="page_practice.html">
+            <a href="compose/pages/page_practice.html">
                 <h2>Practice</h2>
                 <p>Practice code from Code-Lab or self idea</p>
             </a>
