--- a/compose/pages/page_buttons.html
+++ b/compose/pages/page_buttons.html
@@ -13,7 +13,7 @@
     <h1 class="header-heading">Jetpack Compose / Layout</h1>
     <div>
         <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
-        <a class="menu" href="profile.html" id="profileLink">Profile</a>
+        <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
     </div>
 </header>
 
@@ -82,7 +82,7 @@
         console.log(`Fetching data for card ID: ${cardId}`);
 
         const data = [
-            { id: 1, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/images/output-buttons.png',
+            { id: 1, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output-buttons.png',
             description: `
 @Preview(showSystemUi = true)
 @Composable
