--- a/compose/pages/page_layout.html
+++ b/compose/pages/page_layout.html
@@ -13,7 +13,7 @@
     <h1 class="header-heading">Jetpack Compose / Layout</h1>
     <div>
         <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
-        <a class="menu" href="../../index.html" id="profileLink">Profile</a>
+        <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
     </div>
 </header>
 
