--- a/compose/pages/page_practice.html
+++ b/compose/pages/page_practice.html
@@ -13,7 +13,7 @@
     <h1 class="header-heading">Jetpack Compose / Layout</h1>
     <div>
         <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
-        <a class="menu" href="../../index.html" id="profileLink">Profile</a>
+        <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
     </div>
 </header>
 
@@ -99,7 +99,7 @@
 
         const data = [
             {
-                id: 1, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/images/practice-output-1.png',
+                id: 1, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/practice-output-1.png',
                 description: `
 @Preview(showSystemUi = true)
 @Composable
@@ -133,7 +133,7 @@ fun Exercise() {
 
 
             {
-                id: 2, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/images/practice-output-2.png',
+                id: 2, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/practice-output-2.png',
                 description:
                 `
 @Preview(showSystemUi = true)
@@ -164,7 +164,7 @@ fun Exercise() {
 
 
             {
-                id: 3, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/images/practice-output-3.png',
+                id: 3, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/practice-output-3.png',
                 description:
                 `
 
@@ -280,7 +280,7 @@ fun Exercise() {
 
 
              {
-                id: 4, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/images/practice-output-4.png',
+                id: 4, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/practice-output-4.png',
                 description:
                 `
 @Preview(showSystemUi = true)
