--- a/compose/pages/page_texts.html
+++ b/compose/pages/page_texts.html
@@ -13,7 +13,7 @@
 	    <h1 class="header-heading">Jetpack Compose / Text</h1>
 	    <div>
 	        <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
-	        <a class="menu" href="profile.html" id="profileLink">Profile</a>
+	        <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
 	    </div>
 	</header>
 
@@ -101,7 +101,7 @@ function fetchDataById(cardId) {
 	console.log(`Fetching data for card ID: ${cardId}`);
 
     const data = [
-        { id: 1, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/images/output-1.png', description: `
+        { id: 1, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output-1.png', description: `
 
 class MainActivity : ComponentActivity() {
 override fun onCreate(savedInstanceState: Bundle?) {
@@ -120,7 +120,7 @@ Text(text = "Hello there")
 `
 		},
 
-        { id: 2, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/images/output-2.png', description: 
+        { id: 2, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output-2.png', description:
 `
 val customFonts = FontFamily(
     Font(R.font.dm_serif_display_regular, FontWeight.Light),
@@ -162,7 +162,7 @@ fun LearnCompose() {
 
     },
 
-{ id: 3, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/images/output-3.png', description: 
+{ id: 3, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output-3.png', description:
 `
 
 val textDecorations = listOf(
@@ -203,7 +203,7 @@ fun LearnCompose() {
 `
 },
 
-{ id: 4, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/images/output-4.png', description: 
+{ id: 4, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output-4.png', description:
 `
  
 val colors = listOf(
@@ -252,7 +252,7 @@ fun LearnCompose() {
 `
 		},
 
-		{ id: 5, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/images/output-5.png', description:
+		{ id: 5, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output-5.png', description:
 `
 
 @Preview(showSystemUi = true)
