--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             </a>
         </div>
 
+        <div class="card">
+            <a href="compose/pages/page_edit_text.html">
+                <h2>EditText</h2>
+                <p>FillTextField, OutlineTextField, different input types</p>
+            </a>
+        </div>
 
         <div class="card">
             <a href="compose/pages/page_layout.html">
