--- a/compose/pages/page_edit_text.html
+++ b/compose/pages/page_edit_text.html
@@ -814,7 +814,8 @@ fun EditTexts() {
             keyboardActions = KeyboardActions(onDone = {})
         )
 
-
+//This text has no use, (optional)
+//Text shown in output is intents to relevant image only, that text is not this one
         Text(
             text = "ImeAction.Done",
             fontSize = 24.sp,
