--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
         </div>
 
         <div class="card">
+            <a href="compose/pages/page_switch.html">
+                <h2>Switch</h2>
+                <p>Toggel Button, Switch Button in compose</p>
+            </a>
+        </div>
+
+        <div class="card">
             <a href="compose/pages/page_practice.html">
                 <h2>Practice</h2>
                 <p>Practice code from Code-Lab or self idea</p>
