--- a/compose/pages/page_buttons.html
+++ b/compose/pages/page_buttons.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Layouts in Compose</title>
+    <title>Buttons in Compose</title>
     <link rel="stylesheet" type="text/css" href="../styles/styles.css">
 </head>
 
