--- a/compose/pages/page_switch.html
+++ b/compose/pages/page_switch.html
@@ -10,7 +10,7 @@
 
 <body>
 <header>
-    <h1 class="header-heading">Jetpack Compose / Layout</h1>
+    <h1 class="header-heading">Jetpack Compose / Switch</h1>
     <div>
         <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
         <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
