tests connectivity from index

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
         </div>
 
         <div class="card">
+            <a href="compose/pages/page_switch.html">
+                <h2>Test</h2>
+                <p>Functional and UI Tests compose</p>
+            </a>
+        </div>
+
+        <div class="card">
             <a href="compose/pages/page_practice.html">
                 <h2>Practice</h2>
                 <p>Practice code from Code-Lab or self idea</p>
