--- a/compose/pages/page_test.html
+++ b/compose/pages/page_test.html
@@ -102,6 +102,19 @@ Testing Notes
 -> make sure 'src/tests' has folder structure as same as 'src/main'
 -> create new class and start writing tests
 
+
+Make Sure these Dependencies
+    androidTestImplementation("androidx.compose.ui:ui-test-junit4")
+    androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
+    androidTestImplementation("androidx.test.ext:junit:1.1.5")
+
+for Functional Tests
+Navigate : Project/app/src/tests[unitTest]/java/package_name/TestFileName.kt
+
+for app ui tests
+Navigate : Project/app/src/androidTest/java/package_name/TestFileName.kt
+
+
                 `
             },
             {
