--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <header>
         <h1 class="header-heading">Jetpack Compose</h1>
         <div>
+            <a class="menu" href="compose/notes.html" id="notesLink">Notes</a>
             <a class="menu selected" href="index.html" id="composeLink">Compose</a>
             <a class="menu" href="profile/index.html" id="profileLink">Profile</a>
+
         </div>
     </header>
 
