--- a/compose/notes.html
+++ b/compose/notes.html
@@ -5,12 +5,20 @@
     <title>Compose Notes</title>
 </head>
 <body>
-<h3 style="display: inline;">Compose Notes </h3>
-<p style="display: inline;"> (Ref. https://developer.android.com)</p>
-<p>
-    - Compose handles nested layouts efficiently,
-    This is an improvement from Android Views,
-    where you need to avoid nested layouts for performance reasons.
-</p>
+    <h1 style="display: inline;">Compose Notes </h1>
+    <p style="display: inline;"> (Ref. https://developer.android.com)</p>
+
+    <hr>
+    <p><b>Documents</b></p>
+    - Compose handles nested layouts efficiently, This is an improvement from Android Views, where you need to avoid nested layouts for performance reasons.<br>
+    - It is a best practice to pass a modifier to every composable and set it to a default value.
+
+    <hr>
+    <p><b>Recycler View Notes</b></p>
+    - In Scrollable List, 1) Define Separate Layout in Separate compose function, 2) Call same layout function from lazyColumn {items() { composeFun(param) } }<br>
+    - When Create Model Class For LazyRow || LazyColumn (i.e. RecyclerView) make sure you annotate string with @StringRes val string:Int
+    and drawableImage with @DrawableRes val drawableImage: Int, For Example,
+    <pre>data class Affirmation(<b>@StringRes</b> val string:Int,<b>@DrawableRes</b> val image: Int)</pre>
+
 </body>
 </html>
